css/main.css
/* ... */
.footer-nav ul, 
.footer-social ul{
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

footer a{
    color: #a04a8a;
    text-decoration: none;
}

footer a:hover{
    color: #6a3c91;
}
/************ ANIMATIONS ***************/

.fade-in {
    opacity: 0;
    transform: translateY(20px);
    animation: fadeIn 0.8s ease forwards;
}

@keyframes fadeIn {
    to {
        opacity: 1;
        transform: translateY(10px);
    }
}


/******************* TABLET STYLES ****************/

@media screen and (min-width: 768px){

    main{
        padding: 0 1rem;  
    }

    .menu-toggle {
        display: none;
    }

    nav {
        display: flex !important;
        position: static;
        flex-direction: row;
        justify-content: flex-end;
        gap: 1.5rem;
        background: none;
        width: auto;
    }

    nav a{
        padding: 0.5rem 1rem;
    }

    .footer-nav ul {
        display: flex;
        flex-direction: row;
        gap: 1.5rem;
        justify-content: flex-start;
        flex-wrap: wrap;
    }

    .footer-nav h3{
        display: none;
    }
    .cards{
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        gap: 2rem;
        align-items: start;

    }
        
    .hero-content{
        flex-direction: row;
        align-items: center;
        gap: 2.5rem;
        text-align: left;
        margin-top: 2rem;
    }

    .hero-content img {
        width: 100%;
        transform: rotate(-2deg);
    }
    .process-cards{
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: center;
    }
    .process-cards .card {
        width: 45%;
    }

     /* ABOUT: Mission + History side-by-side */

    /* ABOUT WRAPPER */
    .about .container {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-areas:
            "title title"
            "mission history";
        gap: 2rem;
        align-items: start;
    }

    /* TITLE */
    .about .container h1 {
        grid-area: title;
        text-align: center;
    }

    /* FIRST CARD */
    .about .about-card:nth-of-type(1) {
        grid-area: mission;
    }

    /* SECOND CARD  */
    .about .about-card:nth-of-type(2) {
        grid-area: history;
    }

    /* PETS start grid feel */
    .pets {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        gap: 2rem;
    }

    .impact .container {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr;
        gap: 2rem;
        align-items: start;
    }

    .impact .container h2 {
        grid-column: 1 / -1;
        text-align: center;
    }

    .pet-card {
        margin: 0;
    }

    /* SUPPORT section side-by-side feel */
    .support-content {
        flex-direction: row;
        align-items: stretch;
    }

    .cta .btn-primary {
        min-width: 300px;
    }

    
}

